--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 
 <link rel="stylesheet" href="http://192.168.1.60:1313/css/main.min.css"  />
 
-<script defer src="https://i.indietool.dev/script.js" data-website-id="810d8615-dbd3-4166-a4be-51529c7407da"></script>
+<script defer src="https://i.indietool.dev/script.js" data-website-id="810d8615-dbd3-4166-a4be-51529c7407da" data-tag="web"></script>
 
   </head>
   <body>
